# YoloC

./: .clangd  .gitignore  CMakeLists.txt  image.cpp  live.cpp  main.cpp  model.py  test.py  video.cpp
